consumer-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: consumer-namespace
  labels:
    autossh: allow
