autossh-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: auto-ssh-postgres
  name: auto-ssh-postgres
  namespace: auto-ssh
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: auto-ssh-postgres
  template:
    metadata:
      labels:
        app: auto-ssh-postgres
    spec:
      containers:
      - image: nomulex/auto-ssh:latest
        imagePullPolicy: Always
        name: autossh-rdbms
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - name: ssh-key-path
            mountPath: /ssh/id_ed25519
            subPath: id_ed25519
            readOnly: true
      volumes:
      - name: ssh-key-path
        configMap:
          name: autossh-private-key


      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
