autossh-service.yml
apiVersion: v1
kind: Service
metadata:
  name: autossh-access
  namespace: auto-ssh
spec:
  selector:
    app: auto-ssh-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
