autossh-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: autossh-allow
  namespace: auto-ssh
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          autossh: allow
    ports:
    - protocol: TCP
      port: 5432
